--- a/chat_valorizacion.css
+++ b/chat_valorizacion.css
@@ -10,7 +10,7 @@
             font-size: 15px;
         }
 
-        .container {
+        .container_chat {
             margin-top: 70px;
             text-align: center;
         }
