--- a/chat_valorizacion.css
+++ b/chat_valorizacion.css
@@ -30,6 +30,10 @@
             background-color: rgba(0, 159, 227, 0.9);
             border-color: rgba(0, 159, 227, 0.9);
         }
+        .btn-warning[disabled]{
+            background-color: rgba(0, 159, 227, 0.9);
+            border-color: rgba(0, 159, 227, 0.9);
+        }
         .btn-warning:hover {
             color: #ffffff;
             background-color: rgba(6, 179, 251, 0.9);
